--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 20:05:02 2018</p>
+         Last Run: Thu Nov 15 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -58,19 +58,19 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>8</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>-4</td>
-                        <td>-7</td>
+                        <td>-3</td>
+                        <td>-6</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -105,7 +105,7 @@
                  "-15",
                  "-14",
                  "-11",
-                 "-7"
+                 "-6"
                ]
              },
              {
@@ -118,7 +118,7 @@
                  "-11",
                  "-10",
                  "-7",
-                 "-4"
+                 "-3"
                ]
              }
            ]
@@ -190,8 +190,8 @@
                "data":[
                  "86",
                  "81",
-                 "69",
-                 "55"
+                 "67",
+                 "53"
                ]
              },
              {
@@ -202,7 +202,7 @@
                "data":[
                  "1",
                  "3",
-                 "8",
+                 "7",
                  "11"
                ]
              }
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 20:05:02 2018</p>
+         Last Run: Thu Nov 15 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,7 +268,7 @@
                         <td>5</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>46</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
@@ -284,7 +284,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>62</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -292,11 +292,11 @@
                         <td>8</td>
                         <td>6</td>
                         <td>0</td>
-                        <td>40</td>
-                        <td>0</td>
-                        <td>14</td>
+                        <td>41</td>
+                        <td>1</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>63</td>
+                        <td>61</td>
                      </tr>
                   </tbody>
                </table>
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "46",
+                 "48",
                  "42",
-                 "40"
+                 "41"
                ]
              },
              {
@@ -417,8 +417,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "60",
-                 "62",
-                 "63"
+                 "60",
+                 "61"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 20:05:02 2018</p>
+         Last Run: Thu Nov 15 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,7 +483,7 @@
                         <td>-1</td>
                         <td>-5</td>
                         <td>1</td>
-                        <td>66</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -495,7 +495,7 @@
                         <td>-1</td>
                         <td>-5</td>
                         <td>1</td>
-                        <td>67</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -504,13 +504,13 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-5</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>1</td>
-                        <td>67</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>18</td>
                      </tr>
                   </tbody>
@@ -540,7 +540,7 @@
                "data":[
                  "-5",
                  "-5",
-                 "-5"
+                 "-6"
                ]
              },
              {
@@ -552,7 +552,7 @@
                "data":[
                  "-1",
                  "-1",
-                 "-1"
+                 "-2"
                ]
              }
            ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "67",
-                 "67"
+                 "69",
+                 "69",
+                 "69"
                ]
              },
              {
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 20:05:02 2018</p>
+         Last Run: Thu Nov 15 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>73</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -835,7 +835,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
+                 "60",
                  "63",
                  "65"
                ]
@@ -846,7 +846,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "73",
+                 "72",
                  "76",
                  "78"
                ]
