--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 22:05:02 2018</p>
+         Last Run: Thu Nov 15 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -31,14 +31,14 @@
                      <tr>
                         <td>08:00 AM</td>
                         <td>Clear</td>
-                        <td>-11</td>
-                        <td>-15</td>
+                        <td>-12</td>
+                        <td>-16</td>
                         <td>5</td>
-                        <td>85</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>1</td>
+                        <td>0</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
@@ -46,23 +46,23 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>3</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>3</td>
+                        <td>WSW</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
                         <td>-7</td>
                         <td>-11</td>
-                        <td>1</td>
-                        <td>67</td>
+                        <td>2</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>7</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -70,11 +70,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>52</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>10</td>
+                        <td>4</td>
                      </tr>
                   </tbody>
                </table>
@@ -102,7 +102,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-15",
+                 "-16",
                  "-14",
                  "-11",
                  "-6"
@@ -115,7 +115,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-11",
+                 "-12",
                  "-10",
                  "-7",
                  "-3"
@@ -178,7 +178,7 @@
                "data":[
                  "5",
                  "3",
-                 "1",
+                 "2",
                  "1"
                ]
              },
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
-                 "80",
-                 "67",
-                 "52"
+                 "86",
+                 "81",
+                 "68",
+                 "54"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
-                 "3",
-                 "7",
-                 "10"
+                 "0",
+                 "2",
+                 "4",
+                 "4"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 22:05:02 2018</p>
+         Last Run: Thu Nov 15 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -284,7 +284,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>61</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -294,9 +294,9 @@
                         <td>0</td>
                         <td>41</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>61</td>
+                        <td>60</td>
                      </tr>
                   </tbody>
                </table>
@@ -417,8 +417,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "60",
-                 "61",
-                 "61"
+                 "60",
+                 "60"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 22:05:02 2018</p>
+         Last Run: Thu Nov 15 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -482,24 +482,24 @@
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-5</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>68</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>24</td>
+                        <td>WSW</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-5</td>
-                        <td>1</td>
-                        <td>68</td>
+                        <td>2</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>21</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>68</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>18</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -609,8 +609,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "1",
+                 "2",
+                 "2",
                  "1"
                ]
              },
@@ -621,8 +621,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "68",
-                 "68",
-                 "68"
+                 "69",
+                 "70"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "24",
-                 "21",
-                 "18"
+                 "13",
+                 "13",
+                 "13"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 22:05:02 2018</p>
+         Last Run: Thu Nov 15 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,39 +694,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>1</td>
-                        <td>-2</td>
+                        <td>-3</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>WSW</td>
-                        <td>72</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
+                        <td>0</td>
+                        <td>-4</td>
+                        <td>1</td>
+                        <td>63</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>WSW</td>
+                        <td>87</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Overcast</td>
                         <td>0</td>
                         <td>-4</td>
                         <td>1</td>
                         <td>64</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>WSW</td>
-                        <td>76</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>0</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>66</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>WSW</td>
-                        <td>78</td>
+                        <td>88</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,7 +753,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "-4",
                  "-4"
                ]
@@ -826,7 +826,7 @@
                "data":[
                  "1",
                  "1",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "64",
-                 "66"
+                 "62",
+                 "63",
+                 "64"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "72",
-                 "76",
-                 "78"
+                 "86",
+                 "87",
+                 "88"
                ]
              }
            ]
