--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 23:05:03 2018</p>
+         Last Run: Fri Nov 16 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Clear</td>
                         <td>-12</td>
                         <td>-16</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>86</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>0</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
@@ -49,7 +49,7 @@
                         <td>81</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>2</td>
                      </tr>
                      <tr>
@@ -57,7 +57,7 @@
                         <td>Clear</td>
                         <td>-7</td>
                         <td>-11</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>68</td>
                         <td>0</td>
                         <td>8</td>
@@ -70,7 +70,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -176,9 +176,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
+                 "4",
                  "3",
-                 "2",
+                 "1",
                  "1"
                ]
              },
@@ -191,7 +191,7 @@
                  "86",
                  "81",
                  "68",
-                 "54"
+                 "53"
                ]
              },
              {
@@ -200,7 +200,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "0",
+                 "1",
                  "2",
                  "4",
                  "4"
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 23:05:03 2018</p>
+         Last Run: Fri Nov 16 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -265,10 +265,10 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>5</td>
-                        <td>2</td>
+                        <td>6</td>
+                        <td>3</td>
                         <td>0</td>
-                        <td>48</td>
+                        <td>46</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
@@ -277,8 +277,8 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>7</td>
-                        <td>4</td>
+                        <td>8</td>
+                        <td>6</td>
                         <td>0</td>
                         <td>42</td>
                         <td>1</td>
@@ -288,7 +288,7 @@
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
                         <td>0</td>
@@ -296,7 +296,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>60</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -323,8 +323,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "2",
-                 "4",
+                 "3",
+                 "6",
                  "6"
                ]
              },
@@ -335,8 +335,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "5",
-                 "7",
+                 "6",
+                 "8",
                  "8"
                ]
              }
@@ -405,7 +405,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
+                 "46",
                  "42",
                  "41"
                ]
@@ -418,7 +418,7 @@
                "data":[
                  "60",
                  "60",
-                 "60"
+                 "59"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 23:05:03 2018</p>
+         Last Run: Fri Nov 16 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -480,14 +480,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-5</td>
+                        <td>0</td>
+                        <td>-4</td>
                         <td>2</td>
-                        <td>68</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>13</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -495,19 +495,19 @@
                         <td>-1</td>
                         <td>-5</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>13</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-1</td>
+                        <td>-5</td>
                         <td>1</td>
-                        <td>70</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-4",
                  "-5",
-                 "-5",
-                 "-6"
+                 "-5"
                ]
              },
              {
@@ -550,9 +550,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "0",
                  "-1",
-                 "-1",
-                 "-2"
+                 "-1"
                ]
              }
            ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "69",
-                 "70"
+                 "65",
+                 "67",
+                 "68"
                ]
              },
              {
@@ -631,8 +631,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "13",
-                 "13",
+                 "12",
+                 "12",
                  "13"
                ]
              }
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 23:05:03 2018</p>
+         Last Run: Fri Nov 16 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>86</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,23 +710,23 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>1</td>
-                        <td>63</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>87</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>0</td>
-                        <td>-4</td>
+                        <td>-1</td>
+                        <td>-5</td>
                         <td>1</td>
-                        <td>64</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>88</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -755,7 +755,7 @@
                "data":[
                  "-3",
                  "-4",
-                 "-4"
+                 "-5"
                ]
              },
              {
@@ -767,7 +767,7 @@
                "data":[
                  "1",
                  "0",
-                 "0"
+                 "-1"
                ]
              }
            ]
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
                  "63",
-                 "64"
+                 "65",
+                 "66"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "86",
-                 "87",
-                 "88"
+                 "90",
+                 "91",
+                 "92"
                ]
              }
            ]
